Revision history for Perl extension Plack-Middleware-Assets-RailsLike

{{$NEXT}}
    - Updates dependencies in POD.

0.03 2013-06-07T09:46:47Z
    - Uses prepare_app method to set default values.
    - Adds Cache-Control header to the HTTP response.
    - Removes no strict 'refs'.
    - Adds version string support.
    - Adds Etag support.

0.02 2013-06-06T08:50:56Z

    - Adds default configuration values.
    - Adds search_path option.
    - Adds Expires header to the HTTP response.
    - Enables minifier by default.

0.01 2013-06-04T14:46:04Z

    - original version
