@@ -4,7 +4,7 @@
       "Yoshihiro Sasaki"
    ],
    "dynamic_config" : 0,
-   "generated_by" : "Minilla/v0.4.7, CPAN::Meta::Converter version 2.130880",
+   "generated_by" : "Minilla/v0.4.9, CPAN::Meta::Converter version 2.131560",
    "license" : [
       "perl_5"
    ],
