@@ -4,17 +4,16 @@ use 5.010_001;
 use strict;
 use warnings;
 use parent 'Plack::Middleware';
-use Plack::Util::Accessor qw(path root search_path cache expires minify);
 use Cache::MemoryCache;
-use Carp              ();
-use CSS::Minifier::XS ();
-use Digest::SHA1      ();
-use Errno             ();
+use Carp         ();
+use Digest::SHA1 ();
+use Errno        ();
 use File::Basename;
 use File::Slurp;
 use File::Spec::Functions qw(catdir catfile canonpath);
-use HTTP::Date               ();
-use JavaScript::Minifier::XS ();
+use HTTP::Date ();
+use Plack::Util::Accessor qw(path root search_path expires cache minify);
+use Plack::Middleware::Assets::RailsLike::Compiler;
 
 our $VERSION = "0.03";
 
@@ -38,13 +37,19 @@ sub prepare_app {
     # Set default values for options
     $self->{path}        ||= qr{^/assets};
     $self->{root}        ||= '.';
-    $self->{search_path} ||= [catdir($self->{root},'assets')];
-    $self->{minify}      //= 1;
+    $self->{search_path} ||= [ catdir( $self->{root}, 'assets' ) ];
     $self->{expires}     ||= '3 days';
     $self->{cache}       ||= Cache::MemoryCache->new(
-        {   namespace          => __PACKAGE__,
+        {
+            namespace          => __PACKAGE__,
             default_expires_in => $self->{expires},
         }
+    );
+    $self->{minify} //= 1;
+
+    $self->{_compiler} = Plack::Middleware::Assets::RailsLike::Compiler->new(
+        minify      => $self->{minify},
+        search_path => $self->{search_path}
     );
 }
 
@@ -54,16 +59,17 @@ sub call {
     my $path_info = $env->{PATH_INFO};
     if ( $path_info =~ $self->path ) {
         my $real_path = canonpath( catfile( $self->root, $path_info ) );
-        my ( $filename, $dirs, $suffix ) = fileparse( $real_path, qr/\.[^.]*/ );
+        my ( $filename, $dirs, $suffix )
+            = fileparse( $real_path, qr/\.[^.]*/ );
         my $type = $suffix eq '.js' ? 'js' : 'css';
 
         my $content;
         {
             local $@;
             eval {
-                $content = $self->_build_content( 
-                    $real_path, $filename, $dirs, $suffix, $type
-                );
+                $content
+                    = $self->_build_content( $real_path, $filename, $dirs,
+                    $suffix, $type );
             };
             if ($@) {
                 warn $@;
@@ -73,11 +79,11 @@ sub call {
         return $self->_404 unless $content;
 
         my $etag = Digest::SHA1::sha1_hex($content);
-        if ( $env->{'HTTP_IF_NONE_MATCH'} ||'' eq $etag ) {
+        if ( $env->{'HTTP_IF_NONE_MATCH'} || '' eq $etag ) {
             return $self->_304;
         }
         else {
-            return $self->_build_response($content, $type, $etag);
+            return $self->_build_response( $content, $type, $etag );
         }
     }
     else {
@@ -87,26 +93,26 @@ sub call {
 
 sub _build_content {
     my $self = shift;
-    my ($real_path, $filename, $dirs, $suffix, $type) = @_;
-    my ($base, $version) = $filename =~ /^(.+)-([^\-]+)$/;
+    my ( $real_path, $filename, $dirs, $suffix, $type ) = @_;
+    my ( $base, $version ) = $filename =~ /^(.+)-([^\-]+)$/;
 
     my $content = $self->cache->get($real_path);
     return $content if $content;
 
-    my (@list, $pre_compiled);
+    my ( @list, $pre_compiled );
     if ($version) {
         @list = ( $real_path, catfile( $dirs, "$base$suffix" ) );
         $pre_compiled = 1;
     }
     else {
-        @list = ($real_path);
+        @list         = ($real_path);
         $pre_compiled = 0;
     }
 
     for my $file (@list) {
         my $manifest;
-        read_file($file, buf_ref => \$manifest, err_mode => sub {});
-        if ($! and $!{ENOENT}) {
+        read_file( $file, buf_ref => \$manifest, err_mode => sub { } );
+        if ( $! and $!{ENOENT} ) {
             $pre_compiled = 0;
             next;
         }
@@ -114,12 +120,14 @@ sub _build_content {
             die "read_file '$file' failed - $!";
         }
 
-        if ( $pre_compiled ) {
+        if ($pre_compiled) {
             $content = $manifest;
         }
         else {
-            $content = $self->_parse_manifest( $file, $manifest, $type );
-            $content = $self->_minify($type, $content) if $self->minify;
+            $content = $self->{_compiler}->compile(
+                manifest => $manifest,
+                type     => $type
+            );
         }
 
         # filename with versioning as a key
@@ -131,7 +139,7 @@ sub _build_content {
 
 sub _build_response {
     my $self = shift;
-    my ($content, $type, $etag) = @_;
+    my ( $content, $type, $etag ) = @_;
 
     # build headers
     my $content_type = $type eq 'js' ? 'application/javascript' : 'text/css';
@@ -142,7 +150,7 @@ sub _build_response {
         200,
         [   'Content-Type'   => $content_type,
             'Content-Length' => length($content),
-            'Cache-Control'  => sprintf('max-age=%d', $max_age),
+            'Cache-Control'  => sprintf( 'max-age=%d', $max_age ),
             'Expires'        => HTTP::Date::time2str($expires),
             'Etag'           => $etag,
         ],
@@ -151,47 +159,6 @@ sub _build_response {
 }
 
 my $file_id = 0;
-
-sub _parse_manifest {
-    my $self = shift;
-    my ( $real_path, $manifest, $type ) = @_;
-
-    # copy from cpanm
-    my ( $asset, $error );
-    {
-        local $@;
-        $asset = eval sprintf <<EOM, $file_id++;
-package Plack::Middleware::Assets::RailsLike::Asset%d;
-no warnings;
-my \$result;
-BEGIN { Plack::Middleware::Assets::RailsLike::Asset->import(\\\$result) };
-
-# line 1 "$real_path"
-$manifest;
-
-\$result;
-EOM
-        $error = $@;
-    }
-    if ($error) { Carp::croak "Parsing $real_path failed: $error" }
-
-    return $asset->to_string(
-        type        => $type,
-        search_path => $self->search_path
-    );
-}
-
-sub _minify {
-    my $self = shift;
-    my ($type, $content) = @_;
-    if ( $type eq 'js' ) {
-        $content = JavaScript::Minifier::XS::minify($content);
-    }
-    else {
-        $content = CSS::Minifier::XS::minify($content);
-    }
-    return $content;
-}
 
 sub _max_age {
     my $self    = shift;
@@ -226,23 +193,23 @@ sub _expires_in_seconds {
 }
 
 sub _304 {
-    my $self    = shift;
-    $self->_response(304, 'Not Modified');
+    my $self = shift;
+    $self->_response( 304, 'Not Modified' );
 }
 
 sub _404 {
-    my $self    = shift;
-    $self->_response(404, 'Not Found');
+    my $self = shift;
+    $self->_response( 404, 'Not Found' );
 }
 
 sub _500 {
-    my $self    = shift;
-    $self->_response(500, 'Internal Server Error');
+    my $self = shift;
+    $self->_response( 500, 'Internal Server Error' );
 }
 
 sub _response {
     my $self = shift;
-    my ($code, $content) = @_;
+    my ( $code, $content ) = @_;
     return [
         $code,
         [   'Content-Type'   => 'text/plain',
@@ -250,81 +217,6 @@ sub _response {
         ],
         [$content]
     ];
-}
-
-package Plack::Middleware::Assets::RailsLike::Asset;
-
-use strict;
-use warnings;
-use File::Basename;
-use File::Slurp;
-use File::Spec::Functions qw(catfile canonpath);
-
-my @bindings = qw(requires);
-
-sub import {
-    my ( $class, $result_ref ) = @_;
-    my $pkg = caller;
-
-    $$result_ref = Plack::Middleware::Assets::RailsLike::Asset->new;
-
-    for my $binding (@bindings) {
-        no strict 'refs';
-        *{"$pkg\::$binding"} = sub { $$result_ref->$binding(@_) };
-    }
-}
-
-sub new {
-    my $class = shift;
-    bless {}, $class;
-}
-
-sub to_string {
-    my $self = shift;
-    my %args = (
-        search_path => ['.'],
-        type        => 'js',
-        @_
-    );
-
-    my $type = $args{type};
-
-    my $content = '';
-    for my $file ( @{ $self->{requires} } ) {
-        my $asset_exists = 0;
-        for my $path ( @{ $args{search_path} } ) {
-
-            my $filename = canonpath(
-                catfile( $path, sprintf( '%s.%s', $file, $type ) ) );
-
-            my $buff;
-            read_file( $filename, buf_ref => \$buff, err_mode => sub { } );
-            unless ($!) {
-                $asset_exists = 1;
-                $content .= $buff;
-                last;
-            }
-            elsif ( $!{ENOENT} ) {
-                next;
-            }
-            else {
-                $asset_exists = 1;
-                Carp::carp("read_file '$filename' failed - $!");
-                last;
-            }
-        }
-        unless ($asset_exists) {
-            Carp::carp( sprintf "requires '%s' failed - No such file in %s",
-                $file, join( ', ', @{ $args{search_path} } ) );
-        }
-    }
-    return $content;
-}
-
-# bindings
-sub requires {
-    my ( $self, $file ) = @_;
-    push @{ $self->{requires} }, $file;
 }
 
 1;
@@ -357,12 +249,12 @@ B<THIS MODULE IS STILL ALPHA. DO NOT USE THIS MODULE IN PRODUCTION.>
 Plack::Middleware::Assets::RailsLike is a Plack middleware to bundle and minify 
 javascript and css files like Ruby on Rails Assets Pipeline.
 
-At first, you create a manifest file. The Manifest file is a list of javascript and css files you want to bundle.
+At first, you create a manifest file. The Manifest file is a list of javascript and css files you want to bundle. The Manifest syntax is same as Rails Assets Pipeline, but only support C<require> command.
 
     > vim ./htdocs/assets/main-page.js
     > cat ./htdocs/assets/main-page.js
-    requires 'jquery';
-    requires 'myapp';
+    //= require jquery
+    //= require myapp
 
 
 Next, write a manifest file's url in your html. This middleware supports versioning. So you can add version string like this.
