@@ -1,2 +1,3 @@
 //= require foo
 //= require bar
+console.log('inline');
