@@ -2,3 +2,4 @@
 *= require foo
 *= require bar
 */
+#inline { height: 50% }
