@@ -1,4 +1,3 @@
 /*
 *= require foo
-*= require bar
 */
