@@ -1,0 +1,3 @@
+.bar {
+    width: 10%;
+}
