@@ -6,14 +6,23 @@ use warnings;
 use parent 'Exporter';
 
 use constant {
-    compiled_js => <<JS,
+    minified_js  => 'var foo=1;function bar(name){alert(name);}',
+    minified_css => '#foo{size:5em}.bar{height:40%;width:60%}',
+};
+
+sub compiled_js() {
+    my $js = <<JS;
 var foo = 1;
 function bar(name) {
     alert(name);
 }
 JS
-    minified_js  => 'var foo=1;function bar(name){alert(name);}',
-    compiled_css => <<CSS,
+    chomp $js;
+    return $js;
+}
+
+sub compiled_css() {
+    my $css = <<CSS;
 #foo {
     size: 5em;
 }
@@ -22,13 +31,13 @@ JS
     width: 60%;
 }
 CSS
-    minified_css => '#foo{size:5em}.bar{height:40%;width:60%}',
-};
+    chomp $css;
+    return $css;
+}
 
 our @EXPORT_OK = qw(
     compiled_js minified_js
     compiled_css minified_css
 );
-
 
 1;
