@@ -2,6 +2,7 @@ Revision history for Perl extension Plack-Middleware-Assets-RailsLike
 
 {{$NEXT}}
     - Updates dependencies in POD.
+    - Changes manifest file syntax. 
 
 0.03 2013-06-07T09:46:47Z
     - Uses prepare_app method to set default values.
